HTML completed, api integration in progress

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,4 +7,14 @@
   &__card {
     display: flex;
   }
+  &__chart {
+    text-align: center;
+    > div {
+      display: inline-block
+    }
+    .ReactChart {
+      background-color: white;
+      padding: 10px;
+    }
+  }
 }
