--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -12,6 +12,7 @@
   margin: 25px;
   flex-grow: 1;
   cursor: pointer;
+  border: 5px solid transparent;
   h2, p {
     margin: 0px;
   }
@@ -24,7 +25,7 @@
 }
 
 .selected-card {
-  border: 5px solid forestgreen;
+  border-color: forestgreen;
 }
 
 .grey-text {
